--- a/frontend/csyllabus/src/app/core/explorer/explorer.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/explorer.component.html
@@ -1,6 +1,6 @@
 <form (keyup.enter)="exploreCourses()">
   <div style="margin-top: 40px;">
-    <div class="col-md-12">
+    <div class="col-md-12" style="margin-top:80px">
       <p class="custom-card-title">Explorer</p>
       <div style="background-color: #fffc;
             position: relative;
