--- a/frontend/csyllabus/src/app/core/result-cards-comparator/result-cards-comparator.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards-comparator/result-cards-comparator.component.html
@@ -1,5 +1,7 @@
 <div class="container" *ngIf="courses">
 
+  <div class="container col-md-12">
+
   <div *ngIf="courses && courses.length > 0"
        class="puls-rings-outer">
     <div class="puls-rings"></div>
@@ -59,5 +61,7 @@
     <div class="puls-rings"></div>
   </div>
     <div>No courses for given search!</div>
+  </div>
+
   </div>
 </div>
