--- a/frontend/csyllabus/src/app/core/result-cards/result-cards.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards/result-cards.component.html
@@ -1,4 +1,6 @@
-<div class="container" *ngIf="courses">
+<div *ngIf="courses">
+
+  <div class="container col-md-12">
 
   <div *ngIf="courses && courses.length > 0"
        class="puls-rings-outer">
@@ -42,10 +44,14 @@
     </mat-card>
 
   </div>
+
   <div *ngIf="!courses || courses.length === 0" style="padding: 50px; ">
     <div class="puls-rings-outer">
     <div class="puls-rings"></div>
   </div>
     <div>No courses for given search!</div>
   </div>
+
+  </div>
 </div>
+
