--- a/frontend/csyllabus/src/app/core/result-cards/result-cards.component.css
+++ b/frontend/csyllabus/src/app/core/result-cards/result-cards.component.css
@@ -17,6 +17,18 @@
 
 }
 
+.container{
+    width:100%;
+    background-image:url(../../../images/a4.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+
+
+}
+
 @media only screen and (max-width: 1000px) {
 
   .hideImg {
