logo to home navigation

--- a/frontend/csyllabus/src/app/components/navbar/navbar.component.html
+++ b/frontend/csyllabus/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="topnav" id="myTopnav">
-    <img  class="logo" src="https://preview.ibb.co/cLsuiR/logotopbar.png">
-    <a href="documentation">DOCUMENTATION</a>
+    <img routerLink="core" class="logo" src="https://preview.ibb.co/cLsuiR/logotopbar.png">
+    <a routerLink="documentation">DOCUMENTATION</a>
     <a routerLink="about">ABOUT</a>
     <a routerLink="core">EXPLORE & COMPARE</a>
     <a mat-raised-button class="icon" (click)="myFunction()">&#9776;</a>
