nav bar responsive fix

--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -1,13 +1,51 @@
 <div>
-  <div class="header">
-    <app-navbar></app-navbar>
-  </div>
+
+    <mat-card>CSyllabus is imagined as a web platform which should ease up process of finding and comparing
+    courses on domestic and foreign faculties. It will enable users to discover and compare courses on interactive way
+    through web application. This “one click” app will save time and provide very useful information to interested
+    parties.</mat-card>
   <img src="http://i64.tinypic.com/25810td.jpg" alt="logocsyllabus" border="0" width="500px" style="max-width:80%">
   <div class="logo"><p>"CSyllabus is imagined as a web platform which should ease up process of finding and comparing
     courses on domestic and foreign faculties. It will enable users to discover and compare courses on interactive way
     through web application. This “one click” app will save time and provide very useful information to interested
     parties."</p>
   </div>
+
+      <div style="float:right;">
+    <hr>
+    <h1 style="margin:30px;color:rgb(47, 75, 131);">Our Vision</h1>
+    <div class="general">
+      <p>
+        Our application will be used to help the students choose courses. For that, the student will be able to choose
+        his home university and if he wants, his wanted destination (via city, country or faculty name), plus the
+        courses he wants to select. He will be able to select them by typing keywords that represent the courses. Then
+        the application will analyze his input and match it with input data from syllabuses to find him suitable
+        faculties and courses.
+        Our vision besides data gathering and analysis, is to add a community so that students can see feedback from
+        previous students at the proposed universities and maybe contact them to have more informations. But also we
+        would like to introduce to the student what he can see in the chosen city, the night life, the students’
+        occupations, etc
+      </p>
+    </div>
+    <hr>
+    <h1 style="margin:30px;color:rgb(47, 75, 131);">Our Motivation</h1>
+    <div class="general">
+      <p>
+        Csyllabus is part of a set of projects purposed in the <a
+        href="http://score-contest.org/2018/projects/csyllabus.php"> SCORE </a> competition 2018 edition.
+        The SCORE Contest is aimed at promoting and fostering software engineering in universities worldwide.
+        Student teams from all over the world participate in a competition for students from undergraduate to master's
+        level.
+        Each team will develop a software project chosen from a list of projects proposed and sponsored by program
+        committee members.
+        In order to accommodate a wide range of academic calendars, the SCORE 2018 Contest will run from May 2017 to
+        January 2018.
+        Finalist teams will be invited to <a href="https://conf.researchr.org/home/icse-2018/">ICSE</a> 2018 in
+        Gothenburg, Sweden.
+      </p>
+    </div>
+  </div>
+
   <hr>
   <h2 style="margin:30px;color:rgb(47, 75, 131);">Our Team</h2>
   <div class="ourteam">
@@ -157,40 +195,6 @@
         </p>
         <p><b>E-mail:</b> raffaela.mirandola@polimi.it</p>
       </div>
-    </div>
-  </div>
-  <div style="float:right;">
-    <hr>
-    <h1 style="margin:30px;color:rgb(47, 75, 131);">Our Vision</h1>
-    <div class="general">
-      <p>
-        Our application will be used to help the students choose courses. For that, the student will be able to choose
-        his home university and if he wants, his wanted destination (via city, country or faculty name), plus the
-        courses he wants to select. He will be able to select them by typing keywords that represent the courses. Then
-        the application will analyze his input and match it with input data from syllabuses to find him suitable
-        faculties and courses.
-        Our vision besides data gathering and analysis, is to add a community so that students can see feedback from
-        previous students at the proposed universities and maybe contact them to have more informations. But also we
-        would like to introduce to the student what he can see in the chosen city, the night life, the students’
-        occupations, etc
-      </p>
-    </div>
-    <hr>
-    <h1 style="margin:30px;color:rgb(47, 75, 131);">Our Motivation</h1>
-    <div class="general">
-      <p>
-        Csyllabus is part of a set of projects purposed in the <a
-        href="http://score-contest.org/2018/projects/csyllabus.php"> SCORE </a> competition 2018 edition.
-        The SCORE Contest is aimed at promoting and fostering software engineering in universities worldwide.
-        Student teams from all over the world participate in a competition for students from undergraduate to master's
-        level.
-        Each team will develop a software project chosen from a list of projects proposed and sponsored by program
-        committee members.
-        In order to accommodate a wide range of academic calendars, the SCORE 2018 Contest will run from May 2017 to
-        January 2018.
-        Finalist teams will be invited to <a href="https://conf.researchr.org/home/icse-2018/">ICSE</a> 2018 in
-        Gothenburg, Sweden.
-      </p>
     </div>
   </div>
 </div>
