--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -2,7 +2,7 @@
   <div class="header">
     <app-navbar></app-navbar>
   </div>
-  <img src="http://i64.tinypic.com/25810td.jpg" alt="logocsyllabus" border="0" width="500px" style="max-width:80%">
+  <img src="http://i64.tinypic.com/25810td.jpg" alt="logocsyllabus" border="0" width="500px" style="max-width:80%; margin-top:60px;">
   <div class="logo"><p>"CSyllabus is imagined as a web platform which should ease up process of finding and comparing
     courses on domestic and foreign faculties. It will enable users to discover and compare courses on interactive way
     through web application. This “one click” app will save time and provide very useful information to interested
@@ -16,7 +16,7 @@
         <div class="personname">
           <h2>Matej Vukosav</h2>
         </div>
-        <img src="http://www.fer.unizg.hr/images/50028139/matej-vukosav.jpg" style="border-radius: 50%;" width="150px"
+        <img src="https://image.ibb.co/bJ820G/matej_vukosav.jpg" style="border-radius: 50%;" width="150px"
              height="150px">
         <div class="content">
           <h3 style="text-align:center">Product Owner</h3>
@@ -33,7 +33,7 @@
         <div>
           <h2>Thomas Benetti</h2>
         </div>
-        <img src="http://www.fer.unizg.hr/images/50028139/IMG_8461.JPG" style="border-radius: 50%;" width="150px"
+        <img src="https://preview.ibb.co/huYD7w/IMG_8461.jpg" style="border-radius: 50%;" width="150px"
              height="150px">
         <div class="content">
           <h3 style="text-align:center">Scrum Master</h3>
@@ -50,7 +50,7 @@
         <div>
           <h2>Emanuel Guberovic</h2>
         </div>
-        <img src="http://www.fer.unizg.hr/images/50028139/guber.jpg" style="border-radius: 50%" width="150px"
+        <img src="https://image.ibb.co/fCrBub/guber.jpg" style="border-radius: 50%" width="150px"
              height="150px">
         <div class="content">
           <h3 style="text-align:center">Full Stack Developer</h3>
@@ -68,7 +68,7 @@
       <div>
         <h2>Zvonimir Relja</h2>
       </div>
-      <img src="http://www.fer.unizg.hr/images/50028139/profilna.jpg" style="border-radius: 50%" width="150px"
+      <img src="https://image.ibb.co/j82UfG/profilna.jpg" style="border-radius: 50%" width="150px"
            height="150px">
       <div class="content">
         <h3 style="text-align:center">Backend Developer</h3>
@@ -85,7 +85,7 @@
       <div>
         <h2>Filip Turčinović </h2>
       </div>
-      <img src="http://www.fer.unizg.hr/images/50028139/filip.jpg" style="border-radius: 50%" width="150px"
+      <img src="https://image.ibb.co/c6umSw/filip.jpg" style="border-radius: 50%" width="150px"
            height="150px">
       <div class="content">
         <h3 style="text-align:center"> Full Stack Developer</h3>
@@ -101,7 +101,7 @@
       <div>
         <h2>Adrien Roques</h2>
       </div>
-      <img src="http://www.fer.unizg.hr/images/50028139/Adrien%20Roques.png" style="border-radius: 50%" width="150px"
+      <img src="https://image.ibb.co/nvdrub/Adrien_Roques.png" style="border-radius: 50%" width="150px"
            height="150px">
       <div class="content">
         <h3 style="text-align:center">Frontend Developer</h3>
@@ -116,7 +116,7 @@
       <div>
         <h2>Sebastian Mayoral</h2>
       </div>
-      <img src="http://www.fer.unizg.hr/images/50028139/indice(1).png" style="border-radius: 50%" width="150px"
+      <img src="https://image.ibb.co/e6McZb/indice_1.png" style="border-radius: 50%" width="150px"
            height="150px">
       <div class="content">
         <h3 style="text-align:center">Frontend Developer</h3>
