--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="where">
         <h1  style="font-size:120%" >{{course.faculty}}</h1>
-        <h1  style="font-size:120%;    font-weight: bold">{{course.university}}</h1>
+        <h1  style="font-size:120%">{{course.university}}</h1>
         <img class="logoU" src="http://www.best-masters.com/assets/img/logo_ecole/153.jpg" height="80" width="80">
         <a href="http://www.university.com"></a>
         <h1 style="font-size:120%">{{course.city}}, {{course.country}} </h1>
@@ -16,9 +16,9 @@
         <div class="details">
           <div class="subtitle">Details</div>
           <div style="margin:20px">
-              <h4 style="margin:5px"><img matIcon style="margin-right:10px" src="https://png.icons8.com/debt/color/50/000000" height="40" width="40"> &nbsp; ECTS: &nbsp;  {{course.ects}}</h4>
-              <h4 style="margin:5px"><img matIcon style="margin-right:10px" src="https://png.icons8.com/voice-recognition/color/50/000000" height="40" width="40"> &nbsp; English Level:  &nbsp;   {{course.englishLevel}}</h4> 
-              <h4 style="margin:5px"><img matIcon  style="margin-right:10px" src="https://png.icons8.com/read-online/color/50/000000" height="40" width="40"> &nbsp; Semester: &nbsp;   {{course.semester}}</h4> 
+              <h4 style="margin:5px"><img matIcon src="https://png.icons8.com/debt/color/50/000000" height="30" width="30"> &nbsp; ECTS: &nbsp;  {{course.ects}}</h4>
+              <h4 style="margin:5px"><img matIcon src="https://png.icons8.com/voice-recognition/color/50/000000" height="30" width="30"> &nbsp; English Level:  &nbsp;   {{course.englishLevel}}</h4> 
+              <h4 style="margin:5px"><img matIcon src="https://png.icons8.com/read-online/color/50/000000" height="30" width="30"> &nbsp; Semester: &nbsp;   {{course.semester}}</h4> 
           </div>
         </div>
         <div class="description">
